--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ domain=i.pvv.org
 default_title=pvv's services
 
 [dibbler]
-host=lol no
-db=you wish
-user=uguu
-pwd=staph
+host=localhost
+db=mydb
+user=postres
+pwd=eatme
