Made the server more userfriendly to do git-pulls and added dns.py, did some general cleanup, randomredirect somewhat ready to go live?

--- a/.gitignore
+++ b/.gitignore
@@ -56,5 +56,9 @@ docs/_build/
 # PyBuilder
 target/
 
-# other stuff:
+# project specific:
 *.bak
+config.ini
+ideas.txt
+ssl tests
+services/u/database.dat
